fix skills section tablet off center

--- a/style.css
+++ b/style.css
@@ -140,16 +140,26 @@ section{
     margin:2rem;
 }
 
-.skill--section .container{
+/* .skill--section .container{
     margin-top:15%;
     margin-bottom:15%;
 
-}
+} */
 .skill--section .row{
-    display:flex;
-    justify-content: center;
+     display:flex;
+
     align-items: center;
-    margin-top:2rem;
+    justify-content: center;
+}
+
+.skills-container{
+    min-height:100vh;
+    
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+ 
 }
 /************************************************/
 
